<resources>
    <string name="app_name">Medizine</string>
    <string name="im_a_doctor">I\'m a Doctor</string>
    <string name="im_a_visitor">I\'m a Visitor</string>
    <string name="normal">User</string>
    <string name="doctor">Doctor</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_app">Share</string>

    <!-- Contact Us String -->
    <string name="title_contact_us">Contact Us</string>
    <string name="request_title">Request</string>
    <string name="request_button">Send</string>
    <string name="request_sent">Request Sent!</string>
    <string name="request_not_sent">Unable to send the request!</string>
    <string name="contact_us_call_message">In case you have any other query,\n you may call us</string>
    <string name="call_button">Call</string>
    <string name="feedback_sent">Thanks for your valuable Feedback!</string>
    <string name="feedback_not_sent">Unable to send the Feedback!</string>
    <string name="contact_hint">Enter request here</string>

    <string name="welcome_to_medizine">Welcome to Medizine</string>
    <string name="please_enter_request">Please enter a valid request</string>

    <string name="duration_separator">:</string>
    <string name="by">by</string>
    <string name="successful_update">Successfully Updated</string>
    <string name="successful_upload">Successfully Uploaded</string>
    <string name="successful_edit">Successfully Edited</string>
    <string name="successful_delete">Successfully Deleted</string>

    <string name="download_only_on_wifi">Download Only on Wifi</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="never">Never</string>
    <string name="not_now">Not Now</string>
    <string name="rating_dialog_form_title">Tell us where we can improve</string>
    <string name="rating_dialog_positvie">Rate on Playstore</string>
    <string name="rating_dialog_negative">Maybe Later</string>
    <string name="rating_dialog_title">How was your experience with us?</string>
    <string name="rating_dialog_form_hint">Suggest us what went wrong and we\'ll work on it!</string>
    <string name="name_field_blank_in_login">Enter full name</string>
    <string name="mobile_field_blank_in_login">Enter mobile number</string>
    <string name="referral_field_blank_in_login">Enter referral code</string>
    <string name="terms_and_conditions">By logging in you agree to Medizine\'s &lt;a href=%s>terms &amp; conditions&lt;/a> and &lt;a href=%s>privacy policy&lt;/a>.</string>
    <string name="wrong_otp_error">Wrong OTP</string>
    <string name="internet_unavailable">Internet Unavailable</string>
    <string name="oops_something_went_wrong">Oops! Something went wrong. Try again later.</string>
    <string name="otp_sent_again">OTP sent again</string>
    <string name="otp_sent">OTP sent</string>
    <string name="verifying_otp">Verifying ...</string>
    <string name="otp_verified">OTP Verified!</string>
    <string name="verify">Verify</string>
    <string name="error_valid_name">Enter valid name</string>
    <string name="error_valid_bio">Enter valid bio</string>
    <string name="error_valid_dob">Enter valid Date of Birth</string>
    <string name="error_verify_number">Verify phone number</string>
    <string name="error_select_gender">Select gender</string>
    <string name="enter_country_code">Please enter a valid country code</string>
    <string name="invalid_mobile_number">Enter a valid mobile number</string>
    <string name="generic_permission_message">Kindly give permission to go ahead</string>
    <string name="alternative_number_same">Alternate number same as phone number</string>
    <string name="unresolved_location_requirements">Unable to resolve GPS requirements.</string>
    <string name="location_timeout_error_message">Unable to fetch location, please try again</string>
    <string name="location_no_provider_error_message">Unable to fetch location, please check network and location availability</string>

    <!--First time tutorial-->
    <string name="dismiss_text">GOT IT</string>
    <string name="search_description">Search here by entering name or place</string>
    <string name="edit_description">Click here to add additional details</string>

    <!-- update dialog specific strings -->
    <string name="text_update_title">New Version Available</string>
    <string name="text_force_update_positive_button">Update Now</string>
    <string name="text_normal_update_positive_button">Update</string>
    <string name="text_normal_update_negative_button">Cancel</string>
    <string name="done_button">Done</string>

    <!--StateLayoutStrings-->
    <string name="text_error">Failed to load data, Please try again!</string>
    <string name="text_empty">No data available to show.</string>
    <string name="text_refresh">Retry</string>
    <!--End-->

    <!-- storage permission specific strings -->
    <string name="dialog_ask_permission_title">Storage permission is required</string>

    <string name="drawer_open">Opening drawer</string>
    <string name="drawer_closed">Closing drawer</string>
    <string name="saving">Saving…</string>

    <string name="edit">Edit</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="remove_photo">Remove Photo</string>

    <string name="subscribers">%1$s subscribers</string>
    <string name="subscribed">Subscribed</string>
    <string name="subscribe">Subscribe</string>
    <string name="member_profile">Member</string>
    <string name="personal">Personal Info</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">D.O.B</string>
    <string name="phone_number">Phone</string>
    <string name="alternate_number">Alt Phone</string>
    <string name="id_proof">Id Proof</string>
    <string name="upload_identity_proof">Upload Id Proof</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="deleting">Deleting</string>
    <string name="editing">Editing</string>
    <string name="uploading">Uploading</string>
    <string name="go_live">Go Live</string>
    <string name="starting_live_stream">Starting live stream…</string>
    <string name="done">Done</string>
    <string name="error_valid_email">Invalid email</string>
    <string name="loading">Loading…</string>
    <string name="sign_in_cancelled">Sign in cancelled!</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="slots">Slots</string>
    <string name="timing">Timing</string>
    <string name="booked_by_you">Booked by you!</string>
    <string name="book">Book</string>
    <string name="add_slot">Add Slot</string>
    <string name="start_time">Start Time</string>
    <string name="error_invalid_time">Enter a valid time.</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="default_time">00:00</string>
    <string name="end_time">End Time</string>
    <string name="invalid_slot_time_range">Time range for slot must lies between 15 to 30 minutes.</string>
    <string name="slot_timing">Starts At : %1$s \nEnds At : %2$s</string>
    <string name="available_slots">Available Slots</string>
    <string name="booking_in_progress">Booking in progress…</string>
    <string name="appointments">Appointments</string>
    <string name="appointment_date">Appointment Date : %1$s</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="join">Join</string>
    <string name="meeting_status_info">Doctor will call you between %1$s to %2$s.</string>
    <string name="zoom_status_live">Live</string>
    <string name="zoom_status_completed">Completed</string>
    <string name="upcoming">Upcoming</string>
    <string name="unknown">Unknown</string>
    <string name="zoom_notification_text">Call In Progress</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="title">Title</string>
    <string name="duration">Duration</string>
    <string name="start_a_meeting">Start meeting</string>
    <string name="start">Start</string>
    <string name="meeting_code">Meeting No.</string>
    <string name="or">or</string>
    <string name="zoom">Zoom</string>
    <string name="link_zoom">Link Zoom</string>
    <string name="zoom_id_pass_validation_msg">Invalid zoom password.</string>
    <string name="no_zoom_user_found">No zoom user found.</string>
    <string name="linking">Linking...</string>
    <string name="log_in_with_zoom">Log in with zoom</string>
    <string name="zoom_password">Zoom Password</string>
    <string name="zoom_email">Zoom Email</string>
    <string name="invalid_meeting_title">Invalid meeting title.</string>
    <string name="duration_15_mins" translatable="false">15 mins</string>
    <string name="duration_30_mins" translatable="false">30 mins</string>
    <string name="duration_45_mins" translatable="false">45 mins</string>
    <string name="duration_one_hr" translatable="false">1 hr</string>
    <string name="duration_one_and_half_hrs" translatable="false">1.5 hrs</string>
    <string name="duration_two_hrs" translatable="false">2 hrs</string>
    <string name="duration_two_and_half_hrs" translatable="false">2.5 hrs</string>
    <string name="duration_three_hrs" translatable="false">3 hrs</string>
    <string name="invalid_meeting_number">Invalid zoom meeting number.</string>
    <string name="zoom_pending_meeting_dialog">Do you want to leave current meeting and start another?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="signin_success">Signed in successfully.</string>
    <string name="leaving">Leaving...</string>
    <string name="unlink_zoom">Unlink Zoom</string>
    <string name="logout_success">"Unlinked zoom successfully."</string>
</resources>