<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="22dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_title"
            android:textColor="@color/onSurfaceSubtitle"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/etRequest"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_background"
            android:gravity="top"
            android:hint="@string/contact_hint"
            android:padding="15dp"
            android:textColor="@color/onSurfaceSubtitle"
            android:textSize="14sp" />

        <Button
            android:id="@+id/requestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/secondary"
            android:focusable="true"
            android:foreground="@drawable/ripple_effect"
            android:text="@string/request_button"
            android:textColor="@color/white" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/boundary" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/contact_us_call_message"
            android:textAlignment="center"
            android:textColor="@color/onSurfaceText"
            android:textSize="14sp" />


        <Button
            android:id="@+id/callButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondary"
            android:focusable="true"
            android:foreground="@drawable/ripple_effect"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/call_button"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>

