<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <EditText
        android:id="@+id/zoomUserEmailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_background"
        android:focusable="true"
        android:hint="@string/zoom_email"
        android:imeOptions="actionNext|flagNoExtractUi"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_6sdp"
        android:textColor="@color/onSurfaceText"
        android:textColorHint="@color/onSurfaceHint"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/zoomPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_background"
        android:focusable="true"
        android:hint="@string/zoom_password"
        android:imeOptions="actionNext|flagNoExtractUi"
        android:inputType="textPassword"
        android:padding="@dimen/_6sdp"
        android:textColor="@color/onSurfaceText"
        android:textColorHint="@color/onSurfaceHint"
        android:textSize="15sp" />


    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/redLight2"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/log_in_with_zoom"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/layoutProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvConnecting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linking" />

    </LinearLayout>

</LinearLayout>
